--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build for new HOC.loader.js";
+      var loaderUrl = buildUrl + "/build seekflee.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build for new HOC.data",
-        frameworkUrl: buildUrl + "/build for new HOC.framework.js",
-        codeUrl: buildUrl + "/build for new HOC.wasm",
+        dataUrl: buildUrl + "/build seekflee.data",
+        frameworkUrl: buildUrl + "/build seekflee.framework.js",
+        codeUrl: buildUrl + "/build seekflee.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Cubethon Project",
